k8s/k3d/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kboot-k3d-service
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "traefik"  # Specify the Traefik ingress class
    traefik.ingress.kubernetes.io/router.entrypoints: "web"  # Specify the entrypoint (web is the default)
spec:
  rules:
    - host: localhost  # Replace with your actual domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kboot-k3d-service  # Name of your service
                port:
                  number: 80  # Port of your service
